--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Run Action
         uses: llun/feeds@2.3
-        with:
+        # with:
           # opmlFile: feeds.opml
           # branch: contents
           # Github token for pulling repository information
